--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,24 @@
   text-align: center;
 }
 
+.box{
+  width:75%;
+  background-color: white;
+  color:black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+  text-align: left;
+  margin:10px;
+  border-radius: 10px;
+}
+
+.prodimg{
+  height: 80px;
+  padding-right: 10px;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
