--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
+*{
+  box-sizing: border-box;
+}
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 1500px;
 }
 
 html{
-  height:auto;
+  height:100%;
 }
 
 .App{
@@ -27,8 +30,8 @@ html{
   align-items: center;
   padding: 10px;
   text-align: left;
-  margin:10px;
   border-radius: 10px;
+  margin: 10px 0 10px 0;
 }
 
 .prodimg{
